<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">火舞游戏</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="home">首页</string>
    <string name="rank">排行</string>
    <string name="classify">分类</string>
    <string name="footprint">足迹</string>
    <string name="me">我</string>
    <string name="back">返回</string>
    <string name="guess_you_like">猜你喜欢</string>
    <string name="change">换一换</string>
    <string name="recommend">小编推荐</string>
    <string name="more">更多</string>
    <string name="fine_game">精品游戏</string>
    <string name="more_game">更多精品游戏</string>
    <string name="rq">人气：</string>
    <string name="start">开始</string>
    <string name="load_more">点击加载更多</string>
    <string name="login">登录</string>
    <string name="come_here">快来这里看看吧！</string>
    <string name="originality">原创</string>
    <string name="navigation">应用导航</string>
    <string name="game_hall">游戏大厅</string>
    <string name="my_collection">我的收藏</string>
    <string name="active_center">活动中心</string>
    <string name="recharge_center">充值中心</string>
    <string name="hint_et_account">手机/邮箱</string>
    <string name="hint_et_password">请填写账号密码</string>
    <string name="cb_memory_me">记住我（两周内免登录）</string>
    <string name="forget_password">忘记密码？</string>
    <string name="login_now">立即登陆</string>
    <string name="register">轻松注册</string>
    <string name="author">作者：</string>
    <string name="collection">收藏</string>
    <string name="start_game">开始游戏</string>
    <string name="game_description">游戏介绍</string>
    <string name="huowu_qq">火舞qq群：</string>
    <string name="huowu_weixin">火舞微信：</string>
    <string name="claim_game">认领此游戏</string>
    <string name="game_share">游戏分享</string>
    <string name="game_relative">相关游戏</string>
    <string name="def_remark">条评论</string>
    <string name="et_remark_hint">我来说两句...</string>
    <string name="send">发  布</string>
    <string name="latest_remark">最新评论</string>
    <string name="game_how_to_play">游戏玩法</string>

</resources>
