<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    >


    <RelativeLayout
        android:id="@+id/rl_login_acccount"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="25dp"
        >

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/account"
            android:id="@+id/img_account"
            />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:id="@+id/et_account"
            android:layout_toRightOf="@+id/img_account"
            android:layout_toEndOf="@+id/img_account"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="5dp"
            android:layout_marginEnd="5dp"
            android:hint="@string/hint_et_account"
            android:textSize="13sp"
            android:background="@drawable/et_login_bg"
            />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_login_password"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/rl_login_acccount"
        >

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/lock"
            android:id="@+id/img_password"
            />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:id="@+id/et_password"
            android:layout_toRightOf="@+id/img_password"
            android:layout_toEndOf="@+id/img_password"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="5dp"
            android:layout_marginEnd="5dp"
            android:hint="@string/hint_et_password"
            android:textSize="13sp"
            android:background="@drawable/et_login_bg"
            android:inputType="textPassword"
            />

    </RelativeLayout>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cb_memory_me"
        android:textSize="12sp"
        android:layout_below="@+id/rl_login_password"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:id="@+id/cb_memory_me"
        android:textColor="@android:color/secondary_text_light"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forget_password"
        android:textSize="12sp"
        android:id="@+id/tv_forget_password"
        android:layout_alignBottom="@+id/cb_memory_me"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="10dp"
        android:drawablePadding="5dp"
        android:drawableLeft="@drawable/question"
        android:drawableStart="@drawable/question"
        android:gravity="center"
        />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:gravity="center"
        android:text="@string/login_now"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:textColor="@color/white"
        android:background="@drawable/btn_login_bg"
        android:layout_below="@+id/cb_memory_me"
        android:layout_marginTop="15dp"
        />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:gravity="center"
        android:text="@string/register"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:textColor="@color/white"
        android:background="@drawable/btn_register_bg"
        android:layout_below="@+id/btn_login"
        android:layout_marginTop="15dp"
        />

</RelativeLayout>